RESOLVED FIXED51246
The inspector does not compile without JAVASCRIPT_DEBUGGER
https://bugs.webkit.org/show_bug.cgi?id=51246
Summary The inspector does not compile without JAVASCRIPT_DEBUGGER
Benjamin Poulain
Reported 2010-12-17 05:28:07 PST
https://bugs.webkit.org/show_bug.cgi?id=50493 introduce the variable m_extraHeaders but incorrectly put it in the #ifdef for ENABLE(JAVASCRIPT_DEBUGGER).
Attachments
Patch (1.10 KB, patch)
2010-12-17 05:31 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-12-17 05:31:07 PST
Laszlo Gombos
Comment 2 2010-12-17 05:56:33 PST
Comment on attachment 76871 [details] Patch lgtm, r+.
WebKit Commit Bot
Comment 3 2010-12-17 06:16:16 PST
Comment on attachment 76871 [details] Patch Clearing flags on attachment: 76871 Committed r74257: <http://trac.webkit.org/changeset/74257>
WebKit Commit Bot
Comment 4 2010-12-17 06:16:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.