2010-12-17  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Laszlo Gombos.

        The inspector does not compile without JAVASCRIPT_DEBUGGER
        https://bugs.webkit.org/show_bug.cgi?id=51246

        Fix the build, m_extraHeaders does not depend on JAVASCRIPT_DEBUGGER.

        * inspector/InspectorController.h:

Canonical link: https://commits.webkit.org/64602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74257 268f45cc-cd09-0410-ab3c-d52691b4dbfc